Update README: add investor and viewer navigation guide, business justification, and fix markdown formatting